--- a/src/main/resources/com/example/crime_management_system_gui/solve.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/solve.fxml
@@ -13,27 +13,37 @@
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-   <Label fx:id="crimeType" alignment="CENTER" layoutX="601.0" layoutY="310.0" prefHeight="62.0" prefWidth="378.0">
+   <Label fx:id="crimeType" alignment="CENTER" layoutX="239.0" layoutY="363.0" prefHeight="62.0" prefWidth="378.0">
       <font>
          <Font size="24.0" />
       </font>
    </Label>
-   <Label fx:id="message" alignment="CENTER" layoutX="559.0" layoutY="593.0" prefHeight="62.0" prefWidth="508.0">
+   <Label fx:id="message" alignment="CENTER" layoutX="559.0" layoutY="621.0" prefHeight="62.0" prefWidth="508.0">
       <font>
          <Font size="24.0" />
       </font>
    </Label>
-   <DatePicker fx:id="startDate" layoutX="1051.0" layoutY="531.0" prefHeight="62.0" prefWidth="370.0" />
-   <Label fx:id="description" alignment="TOP_LEFT" layoutX="299.0" layoutY="395.0" prefHeight="107.0" prefWidth="1027.0">
+   <DatePicker fx:id="startDate" layoutX="1077.0" layoutY="558.0" prefHeight="62.0" prefWidth="370.0" />
+   <Label fx:id="description" alignment="TOP_LEFT" layoutX="324.0" layoutY="437.0" prefHeight="106.0" prefWidth="1026.0">
       <font>
          <Font size="24.0" />
       </font>
    </Label>
-   <Button layoutX="682.0" layoutY="659.0" mnemonicParsing="false" onAction="#solve" opacity="0.0" prefHeight="50.0" prefWidth="202.0" text="Button">
+   <Button layoutX="688.0" layoutY="684.0" mnemonicParsing="false" onAction="#solve" opacity="0.0" prefHeight="50.0" prefWidth="202.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor>
    </Button>
-   <ComboBox fx:id="criminals" layoutX="215.0" layoutY="530.0" prefHeight="62.0" prefWidth="370.0" />
-   <ComboBox fx:id="cases" layoutX="594.0" layoutY="171.0" onAction="#getCaseInfoForSolve" prefHeight="62.0" prefWidth="378.0" />
+   <ComboBox fx:id="criminals" layoutX="238.0" layoutY="557.0" prefHeight="62.0" prefWidth="378.0" />
+   <ComboBox fx:id="cases" layoutX="644.0" layoutY="185.0" onAction="#getCaseInfoForSolve" prefHeight="62.0" prefWidth="378.0" />
+   <Label fx:id="complainant" alignment="CENTER" layoutX="648.0" layoutY="287.0" prefHeight="62.0" prefWidth="378.0">
+      <font>
+         <Font size="24.0" />
+      </font>
+   </Label>
+   <Label fx:id="witness" alignment="CENTER" layoutX="1077.0" layoutY="362.0" prefHeight="62.0" prefWidth="370.0">
+      <font>
+         <Font size="24.0" />
+      </font>
+   </Label>
 </AnchorPane>
