--- a/src/main/resources/com/example/crime_management_system_gui/update.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/update.fxml
@@ -14,7 +14,7 @@
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-   <Button layoutX="729.0" layoutY="692.0" mnemonicParsing="false" onAction="#update" opacity="0.0" prefHeight="50.0" prefWidth="210.0" text="Button">
+   <Button layoutX="729.0" layoutY="692.0" mnemonicParsing="false" onAction="#update" onMouseClicked="#getCaseInfoForUpdate" opacity="0.0" prefHeight="50.0" prefWidth="210.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor>
