--- a/src/main/resources/com/example/crime_management_system_gui/view_department.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_department.fxml
@@ -19,12 +19,12 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Label fx:id="viewId" alignment="CENTER" layoutX="321.0" layoutY="401.0" prefHeight="63.0" prefWidth="383.0">
+    <Label fx:id="viewName" alignment="CENTER" layoutX="321.0" layoutY="401.0" prefHeight="63.0" prefWidth="383.0">
         <font>
             <Font size="24.0" />
         </font>
     </Label>
-    <TextField fx:id="name" alignment="CENTER" layoutX="570.0" layoutY="188.0" prefHeight="63.0" prefWidth="415.0" promptText="Name">
+    <TextField fx:id="id" alignment="CENTER" layoutX="570.0" layoutY="188.0" prefHeight="63.0" prefWidth="415.0">
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
